[package]
name = "lut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = [ "derive" ]}
console = "0.15.2"
dirs = "4.0.0"
serde = "1.0.145"
serde_json = "1.0.108"
serde_yaml = "0.9.13"
solana-address-lookup-table-program = "1.14.5"
solana-client = "1.14.5"
solana-logger = "1.14.5"
solana-sdk = "1.14.5"
