[package]
name = "lut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
console = "0.15"
dirs = "4.0"
serde = "1.0.145"
serde_yaml = "0.9.13"
solana-address-lookup-table-program = "2.1.7"
solana-pubkey = "2.1.7"
solana-rpc-client = "2.1.7"
solana-rpc-client-api = "2.1.7"
solana-logger = "2.1.7"
solana-sdk = "2.1.7"
serde_json = "1.0.135"
